--- a/styles/globals.css
+++ b/styles/globals.css
@@ -541,6 +541,14 @@ video {
   left: 0.75rem;
 }
 
+.top-1\/2 {
+  top: 50%;
+}
+
+.left-8 {
+  left: 2rem;
+}
+
 .z-50 {
   z-index: 50;
 }
@@ -729,6 +737,14 @@ video {
 
 .border-b-4 {
   border-bottom-width: 4px;
+}
+
+.border-l-2 {
+  border-left-width: 2px;
+}
+
+.border-l-4 {
+  border-left-width: 4px;
 }
 
 .border-none {
@@ -1075,6 +1091,11 @@ video {
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
+}
+
+.blur {
+  --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .filter {
